force-app/main/default/objects/OAuthService__c/OAuthService__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>QuickBook_OAuthService</label>
</CustomObject>