force-app/main/default/objects/OAuthService__c/fields/Application_Token__c.field-meta.xml
<CustomField>
    <fullName>Application_Token__c</fullName>
    <label>Application_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>