force-app/main/default/objects/OAuthService__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>this is the realIm ID</description>
    <label>Company_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>