force-app/main/default/objects/OAuthService__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <label>Consumer_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>