force-app/main/default/objects/OAuthService__c/fields/OAuth_Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Token_Secret__c</fullName>
    <label>OAuth_Token_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>