force-app/main/default/objects/OAuthService__c/fields/Request_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_Token_URL__c</fullName>
    <label>Request_Token_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>