force-app/main/default/objects/OAuthService__c/fields/Temporary_Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Token_Secret__c</fullName>
    <label>Temporary_Token_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>